<resources>
    <string name="app_name" translatable="false">WePet</string>
    <string name="welcome">Welcome</string>
    <string name="email_hint">Email</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password\n</string>
    <string name="password">Password</string>
    <string name="clear_password">Clear password</string>
    <string name="clear_email">Clear email</string>
    <string name="app_icon" translatable="false">App icon</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="clear_name">Clear name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="back" translatable="false"><![CDATA[<]]></string>
    <string name="back_button" translatable="false">Back button</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="enter_your_email_to_begin_the_password_recovery_process">Enter your email to begin the password recovery process.</string>
    <string name="enter_the_new_password_to_access_your_account">Enter the new password to access your account</string>
    <string name="enter_the_4_digit_code_that_was_sent_to_your_email">Enter the 4-digit code that was sent to your email.</string>
    <string name="code">Code</string>
    <string name="we" translatable="false">we</string>
    <string name="pet" translatable="false">Pet</string>
    <string name="animals">Animals</string>
    <string name="camera_cancel">Camera operation canceled</string>
    <string name="visit_saved">Visit saved successfully!</string>
    <string name="shelter_saved">Shelter saved successfully!</string>
    <string name="error_upload_image">Error uploading image</string>
    <string name="shelter">Shelter</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="tab_animals" translatable="false">tab animals</string>
    <string name="tab_for_shelter" translatable="false">tab for shelter</string>
    <string name="tab_for_events" translatable="false">tab for events</string>
    <string name="image_for_animal" translatable="false">image for animal</string>
    <string name="gender">gender</string>
    <string name="logo">logo</string>
    <string name="name_of_app">name of app</string>
    <string name="hamburger_button" translatable="false">hamburger button</string>
    <string name="search_button" translatable="false">search button</string>
    <string name="button" translatable="false">... button</string>
    <string name="home_button" translatable="false">home button</string>
    <string name="marketplace_button" translatable="false">marketplace button</string>
    <string name="social_button" translatable="false">social button</string>
    <string name="profile_button" translatable="false">profile button</string>
    <string name="error_empty_email">Insert Email</string>
    <string name="contacted_successfully">Contacted successfully!</string>
    <string name="correct_pin_entered">Correct PIN entered!</string>
    <string name="liked_successfully">Liked successfully!</string>
    <string name="animal_successfully">Animal successfully!</string>
    <string name="password_reset">Password reset.</string>
    <string name="incorrect_pin_entered">Incorrect PIN entered</string>
    <string name="latitude_longitude_error">Invalid latitude or longitude</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="authentication_successful">Authentication successful.</string>
    <string name="data_saved_successfully">Data saved successfully!</string>
    <string name="camera_permission_granted">Camera permission granted</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="logged_out">Logged out</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_empty_password">Insert Password</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_empty_PIN">Insert pin</string>
    <string name="error_size_PIN">Pin needs to have 6 digits</string>
    <string name="passwords_do_not_match">Passwords must match</string>
    <string name="account_created_successfully">Account created</string>
    <string name="title_activity_google_maps" translatable="false">GoogleMapsActivity</string>
    <string name="my_animals">My animals</string>
    <string name="desative_account">Deactivate account</string>
    <string name="edit_profil">Edit profile</string>
    <string name="event_photo" translatable="false">Event photo</string>
    <string name="photo_for_shelter" translatable="false">Photo for shelter</string>
    <string name="shelters">Shelters</string>
    <string name="profil_photo" translatable="false">Profil photo</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="to_deactivate_your_account_you_will_have_to_confirm_your_email">To deactivate your account you will have to confirm your email.</string>
    <string name="txtContinue">Continue</string>
    <string name="like_button" translatable="false">Like button</string>
    <string name="arrange_a_visit">Arrange a visit</string>
    <string name="age">Age</string>
    <string name="status">Status</string>
    <string name="genderBig">Gender</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="visit_image" translatable="false">visit image</string>
    <string name="arrow" translatable="false"><![CDATA[<]]></string>
    <string name="visit" translatable="false">visit</string>
    <string name="contact">Contact</string>
    <string name="open_list_of_animals">Open list of animals</string>
    <string name="about_us">About us</string>
    <string name="support">Support</string>
    <string name="users" translatable="false">users</string>
    <string name="number_of_users">Number of users</string>
    <string name="_123" translatable="false">123</string>
    <string name="number_of_animals">Number of animals</string>
    <string name="we_are_a_group_of_programmers_living_in_braga_whose_goal_is_to_implement_new_features_that_contribute_to_a_better_world">We are a group of programmers living in Braga whose goal is to implement new features that contribute to a better world.</string>
    <string name="braga_portugal">Braga, Portugal</string>
    <string name="send">Send</string>
    <string name="matter">Matter</string>
    <string name="message">Message</string>
    <string name="set_up_pin">Set up code</string>
    <string name="pin">Code</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="forgot_code">Forgot code?</string>
    <string name="enter_button" translatable="false">Enter button</string>
    <string name="delete_text_button" translatable="false">Delete text button</string>
    <string name="confirm_action">Confirm Action</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out">Log out</string>
    <string name="token" translatable="false">token</string>
    <string name="tittle" translatable="false">Tittle</string>
    <string name="no_internet">No internet connection</string>
    <string name="this_is_the_description" translatable="false">This is the description</string>
    <string name="city">City</string>
    <string name="settings">Settings</string>
    <string name="description_of_the_setting" translatable="false">Description of the setting</string>
    <string name="name_of_setting" translatable="false">Name of setting</string>
    <string name="security">Security</string>
    <string name="social">Social</string>
    <string name="market">Market</string>
    <string name="security_alerts_such_as_logging_into_other_devices">Security alerts such as logging into other devices.</string>
    <string name="someone_followed_her_someone_responded_to_the_post_etc">Someone followed her, someone responded to the post, etc.</string>
    <string name="alerts_about_ads_that_interest_you">Alerts about ads that interest you..</string>
    <string name="alerts_about_new_events_events_you_have_signed_up_for">Alerts about new events, events you have signed up for.</string>
    <string name="alerts_about_your_animals_such_as_alerts_about_the_next_vaccination">Alerts about your animals, such as alerts about the next vaccination.</string>
</resources>
