<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/IT_my_animals"
        android:fontFamily="@font/comfortaa_light"
        android:title="@string/my_animals" />
    <item
        android:id="@+id/IT_edit_profil"
        android:fontFamily="@font/comfortaa_light"
        android:title="@string/edit_profil" />

    <item
        android:id="@+id/IT_desative_account"
        android:fontFamily="@font/comfortaa_light"
        android:title="@string/desative_account" />

    <item
        android:id="@+id/IT_about_us"
        android:fontFamily="@font/comfortaa_light"
        android:title="@string/about_us" />

    <item
        android:id="@+id/IT_support"
        android:fontFamily="@font/comfortaa_light"
        android:title="@string/support" />

    <item
        android:id="@+id/IT_log_out"
        android:fontFamily="@font/comfortaa_light"
        android:title="@string/log_out" />
</menu>


