<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/BTN_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IV_wePetImage"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/name_of_app"
        android:scaleType="fitCenter"
        android:src="@drawable/header_we_pet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Users layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/users_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/light_gray"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/IV_wePetImage">

        <LinearLayout
            android:id="@+id/LL_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/users"
                android:src="@drawable/user" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/number_of_users"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_number_of_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/_123"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Animals layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/animals_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/users_card">

        <LinearLayout
            android:id="@+id/LL_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/animals"
                android:src="@drawable/paws" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/number_of_animals"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_number_of_animals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/_123"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- About us layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/about_us_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/animals_card">

        <LinearLayout
            android:id="@+id/RL_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/TV_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_locationTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/braga_portugal"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TV_descriptionTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/we_are_a_group_of_programmers_living_in_braga_whose_goal_is_to_implement_new_features_that_contribute_to_a_better_world"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/BTN_contact"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/main_rounded_button"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/contact"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>