<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password_question"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/main_blue"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/enter_your_email_to_begin_the_password_recovery_process"
        android:fontFamily="@font/comfortaa_light"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp" />


    <!-- Email edit text with button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CTL_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="25dp"
        android:background="@color/light_gray">

        <EditText
            android:id="@+id/ET_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint"
            android:backgroundTint="@color/light_gray"
            android:fontFamily="@font/comfortaa_light"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toStartOf="@id/IBTN_clear_button_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/IBTN_clear_button_email"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_email"
            android:scaleType="fitCenter"
            android:src="@drawable/delete_input_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ET_email"
            app:layout_constraintBottom_toBottomOf="@id/ET_email" />

        <View
            android:id="@+id/divider_email"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/ET_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/BTN_continue"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/main_rounded_button"
        android:text="@string/submit"
        android:fontFamily="@font/comfortaa_light"
        android:textColor="@color/white" />

</LinearLayout>
