<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_margin="10dp"
    android:background="@color/light_gray"
    app:cardCornerRadius="50dp"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/BTN_hamburger"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/hamburger_button"
            android:scaleType="fitCenter"
            android:src="@drawable/search_hamburger" />

        <EditText
            android:id="@+id/TV_search"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />


        <ImageButton
            android:id="@+id/BTN_search"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/search_button"
            android:scaleType="fitCenter"
            android:src="@drawable/search_search" />

        <ImageButton
            android:id="@+id/BTN_filters"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/button"
            android:scaleType="fitCenter"
            android:src="@drawable/search_dots" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
