<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/IV_main_icon"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/main_logo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email edit text with button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CTL_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="35dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/IV_main_icon">


        <EditText
            android:id="@+id/ET_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/comfortaa_light"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toStartOf="@id/IBTN_clear_button_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/IBTN_clear_button_email"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_email"
            android:scaleType="fitCenter"
            android:src="@drawable/delete_input_text"
            app:layout_constraintBottom_toBottomOf="@id/ET_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ET_email" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/ET_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Password edit text with button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CTL_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="25dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/CTL_email">


        <EditText
            android:id="@+id/ET_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/comfortaa_light"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toStartOf="@id/IBTN_clear_button_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/IBTN_clear_button_password"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_password"
            android:scaleType="fitCenter"
            android:src="@drawable/delete_input_text"
            app:layout_constraintBottom_toBottomOf="@id/ET_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ET_password" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/ET_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/TV_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/main_blue"
        android:fontFamily="@font/comfortaa_light"
        app:layout_constraintEnd_toEndOf="@id/CTL_password"
        app:layout_constraintTop_toBottomOf="@id/CTL_password" />

    <TextView
        android:id="@+id/bad_login_warning_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:fontFamily="@font/comfortaa_light"
        android:textColor="@color/red"
        app:layout_constraintTop_toTopOf="@id/TV_forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/BTN_login"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/main_rounded_button"
        android:text="@string/login_button"
        android:textColor="@color/light_gray"
        android:fontFamily="@font/comfortaa_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CTL_password" />

    <Button
        android:id="@+id/BTN_create_account"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/main_rounded_button"
        android:text="@string/create_account"
        android:textColor="@color/light_gray"
        android:fontFamily="@font/comfortaa_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN_login" />

</androidx.constraintlayout.widget.ConstraintLayout>